--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '1.5.14.RELEASE'
+        springBootVersion = '2.0.3.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -13,9 +13,8 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
-/*apply plugin: 'io.spring.dependency-management'*/
+apply plugin: 'io.spring.dependency-management'
 
-group = 'com.sngjun'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
@@ -23,14 +22,15 @@ repositories {
     mavenCentral()
 }
 
-
 dependencies {
-    compile('org.springframework.security.oauth:spring-security-oauth2')
+    compile('org.springframework.security:spring-security-oauth2-client')
+    compile('org.springframework.security:spring-security-oauth2-jose')
+    compile('org.springframework.boot:spring-boot-starter-security')
+    compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('org.thymeleaf.extras:thymeleaf-extras-java8time')
+    compile('com.h2database:h2')
 
-    runtime('com.h2database:h2')
     //runtime('mysql:mysql-connector-java')
     runtime('org.springframework.boot:spring-boot-devtools')
     compileOnly('org.projectlombok:lombok')
