--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,15 @@
 spring:
-  #  datasource:
-  #    url: jdbc:mysql://
-  #    username:
-  #    password:
-  #    driver-class-name: com.mysql.jdbc.Driver
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/testdb
+    username: testuser
+    password: password
+    driver-class-name: com.mysql.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: create
   h2:
     console:
-      enabled: true
+      enabled: false
       path: /console
   devtools:
     livereload:
